--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Travel-Summary",
+  "name": "trsu",
   "version": "1.0.0",
   "description": "null",
   "main": "index.js",
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/neruthes/travel-summary/issues"
   },
-  "homepage": "https://github.com/neruthes/travel-summary#readme"
+  "homepage": "https://github.com/neruthes/travel-summary#readme",
+  "dependencies": {
+    "child_process": "*"
+  }
 }
