--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trsu",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Travel planning utility",
   "main": "index.js",
   "bin": {
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/neruthes/travel-summary#readme",
   "dependencies": {
-    "child_process": "*"
+    "child_process": "*",
+    "qr-image": "^3.2.0"
   }
 }
